--- a/pages/rizz.html
+++ b/pages/rizz.html
@@ -4,10 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
+        <style>
+            #rizzText {
+                text-align: center;
+                font-size: 30px;
+            }
+        </style>
         <h2><a href="../welcome.html">Go back</a></h2>
-        (so.. 😭 after reading some of these lines i think its worth mentioning that they are auto fetched from a random site)
+        <small>(so.. 😭 after reading some of these lines i think its worth mentioning that they are auto fetched from a random site)</small>
         <button id="rizzBtn">rizz</button>
         <p id="rizzText">Press button for random rizz</p>
 
