--- a/pages/storiess/journal1.html
+++ b/pages/storiess/journal1.html
@@ -4,17 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="../../css/styles.css" />
+        <link rel="stylesheet" href="../../css/stories.css" />
     </head>
     <body>
         <h2><a href="../stories.html">back</a></h2>
-        Assalamu Alaikum ya Muhammad ibn Auwalu<br> 
-        Idk maybe I’m excited today even
-        though I’m currently tired and sleepy. 10:43pm btw. I’ve been motivated
-        by Aisha Gulani to write a poem so that’s what I’m gonna do now. The
-        poem is going to be about how I’ve been feeling about life for the past
-        few days. First I’m going to do some reading then scroll on my second ig
-        account for more inspo and dump all the words and ideas into this
-        entry.<br />
+        Assalamu Alaikum ya Muhammad ibn Auwalu<br />
+        Idk maybe I’m excited today even though I’m currently tired and sleepy.
+        10:43pm btw. I’ve been motivated by Aisha Gulani to write a poem so
+        that’s what I’m gonna do now. The poem is going to be about how I’ve
+        been feeling about life for the past few days. First I’m going to do
+        some reading then scroll on my second ig account for more inspo and dump
+        all the words and ideas into this entry.<br />
 
         This will be a bit unorganized to my future reading but whatever here it
         goes.<br />
