--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <style>
+       
+    </style>
     <b>Howdy 👋</b>, I'm glad you made it through my top secret password that i use for every single one of my apps.
     <h4>What would you like to do?</h4>
     <ul>
