--- a/pages/background.html
+++ b/pages/background.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>background shenanigans</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h2><a href="../welcome.html">Go back</a></h2>
