--- a/pages/storiess/journal2.html
+++ b/pages/storiess/journal2.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="../../css/styles.css" />
+        <link rel="stylesheet" href="../../css/stories.css" />
     </head>
     <body>
         <h2><a href="../stories.html">back</a></h2>
