add background persistence

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -18,5 +18,7 @@
         8168090687 Palmpay<br />
 
         100 naira could go a long way 🙏🏾
+    <script src="../js/bg.js"></script>
+
     </body>
 </html>
