--- a/pages/stories.html
+++ b/pages/stories.html
@@ -19,5 +19,6 @@
         <li><a href="/pages/storiess/journal2.html">Random journal entry from 10 dec 2025</a></li>
         <li><a href="/pages/storiess/journal3.html">Random journal entry from 20 jan 2026</a></li>
     </ul>
+    <script src="../js/bg.js"></script>
 </body>
 </html>
