--- a/pages/storiess/died.html
+++ b/pages/storiess/died.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../../css/stories.css" />
     </head>
     <body>
+        <script src="../../js/bg.js"></script>
         <h2><a href="../stories.html">back</a></h2>
         It’s not an exaggeration that I almost died 4 times. It was 4 different
         car accidents I’ve been part of over the years. The first two were not
