--- a/pages/storiess/journal1.html
+++ b/pages/storiess/journal1.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="../../css/stories.css" />
     </head>
     <body>
+        <script src="../../js/bg.js"></script>
+
         <h2><a href="../stories.html">back</a></h2>
         Assalamu Alaikum ya Muhammad ibn Auwalu<br />
         Idk maybe I’m excited today even though I’m currently tired and sleepy.
