--- a/pages/storiess/journal2.html
+++ b/pages/storiess/journal2.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="../../css/stories.css" />
     </head>
     <body>
+        <script src="../../js/bg.js"></script>
+
         <h2><a href="../stories.html">back</a></h2>
         5:53pm on a random Wednesday<br />
 
