--- a/pages/storiess/journal3.html
+++ b/pages/storiess/journal3.html
@@ -9,6 +9,8 @@
 
     </head>
     <body>
+        <script src="../../js/bg.js"></script>
+
         <h2><a href="../stories.html">back</a></h2>
         Okay first journaling of the year comes 20 days after the year starts.
         So what are my recent thoughts, what do i want to write down. Well today
