--- a/pages/storiess/kd.html
+++ b/pages/storiess/kd.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
+        <script src="../../js/bg.js"></script>
+
     <h2><a href="../stories.html">back</a></h2>
     On Eid day I randomly had this urge to travel to Kaduna and so I travelled the
 next day. I don’t understand how it was that my parents easily agreed
