--- a/pages/storiess/online-friend.html
+++ b/pages/storiess/online-friend.html
@@ -9,6 +9,8 @@
 
     </head>
     <body>
+        <script src="../../js/bg.js"></script>
+
         <h2><a href="../stories.html">back</a></h2>
         My online friend is Sophie Olamide Jegede. She has one of the weirdest
         name combinations ever. Who even names their child Jegede? Sophie is
