--- a/pages/background.html
+++ b/pages/background.html
@@ -14,25 +14,6 @@
         <input type="color" id="color1" value="#ff7f50" />
         <input type="color" id="color2" value="#1e90ff" />
 
-        <script>
-            const colorPicker = document.getElementById("bgColorPicker");
-
-            // Listen for color changes
-            colorPicker.addEventListener("input", () => {
-                document.body.style.background = "";
-                document.body.style.backgroundColor = colorPicker.value;
-            });
-            const color1 = document.getElementById("color1");
-            const color2 = document.getElementById("color2");
-
-            function setGradient() {
-                document.body.style.height = "100vh";
-                document.body.style.background = `linear-gradient(40deg, ${color1.value}, ${color2.value})`;
-            }
-
-            // Listen for changes on both color inputs
-            color1.addEventListener("input", setGradient);
-            color2.addEventListener("input", setGradient);
-        </script>
+        <script src="../js/bg.js"></script>
     </body>
 </html>
