--- a/pages/storiess/met-mother.html
+++ b/pages/storiess/met-mother.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+        <script src="../../js/bg.js"></script>
+
     <h2><a href="../stories.html">back</a></h2>
     I've never met your mother 😭
 </body>
