--- a/welcome.html
+++ b/welcome.html
@@ -20,5 +20,6 @@
         <li><a href="pages/rizz.html">Get rizzed</a></li>
         <li><a href="pages/donate.html">donate 🙏🏾</a></li>
     </ul>
+        <script src="js/bg.js"></script>
 </body>
 </html>
