--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
     <h1>404</h1>
     <p>Oops! This page doesn’t exist.</p>
     <small>Pls send me ss if you see this</small>
-    <p><a href="index.html">Go back home</a></p>
+    <p><a href="welcome.html">Go back home</a></p>
   </div>
 </body>
 </html>
