edited story paths

--- a/pages/stories.html
+++ b/pages/stories.html
@@ -11,13 +11,13 @@
         <h2><a href="../welcome.html">Go back</a></h2>
     <h3><i>pls dont judge </i>🥺 👉🏾👈🏾</h3>
     <ul>
-        <li><a href="pages/storiess/met-mother.html">How I met your mother</a></li>
-        <li><a href="pages/storiess/kd.html">Solo trip to Kaduna</a></li>
-        <li><a href="pages/storiess/died.html">I almost died (4 times)</a></li>
-        <li><a href="pages/storiess/online-friend.html">I met my online friend</a></li>
-        <li><a href="pages/storiess/journal1.html">Random journal entry from 26 oct 2025</a></li>
-        <li><a href="pages/storiess/journal2.html">Random journal entry from 10 dec 2025</a></li>
-        <li><a href="pages/storiess/journal3.html">Random journal entry from 20 jan 2026</a></li>
+        <li><a href="storiess/met-mother.html">How I met your mother</a></li>
+        <li><a href="storiess/kd.html">Solo trip to Kaduna</a></li>
+        <li><a href="storiess/died.html">I almost died (4 times)</a></li>
+        <li><a href="storiess/online-friend.html">I met my online friend</a></li>
+        <li><a href="storiess/journal1.html">Random journal entry from 26 oct 2025</a></li>
+        <li><a href="storiess/journal2.html">Random journal entry from 10 dec 2025</a></li>
+        <li><a href="storiess/journal3.html">Random journal entry from 20 jan 2026</a></li>
     </ul>
     <script src="../js/bg.js"></script>
 </body>
