change images folder location

--- a/pages/memory.html
+++ b/pages/memory.html
@@ -59,12 +59,12 @@
         <script>
             // 1. List of your image URLs (use your own)
             const images = [
-                "/images/1.jpg",
-                "/images/2.png",
-                "/images/3.jpg",
-                "/images/4.jpg",
-                "/images/5.jpg",
-                "/images/6.jpg",
+                "images/1.jpg",
+                "images/2.png",
+                "images/3.jpg",
+                "images/4.jpg",
+                "images/5.jpg",
+                "images/6.jpg",
             ];
 
             const board = document.getElementById("game-board");
