--- a/pages/memory.html
+++ b/pages/memory.html
@@ -59,12 +59,12 @@
         <script>
             // 1. List of your image URLs (use your own)
             const images = [
-                "images/1.JPG",
-                "images/2.PNG",
-                "images/3.JPG",
-                "images/4.JPG",
-                "images/5.JPG",
-                "images/6.JPG",
+                "./images/1.JPG",
+                "./images/2.PNG",
+                "./images/3.JPG",
+                "./images/4.JPG",
+                "./images/5.JPG",
+                "./images/6.JPG",
             ];
 
             const board = document.getElementById("game-board");
