--- a/welcome.html
+++ b/welcome.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <style>
-       
+       ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       }
     </style>
-    <b>Howdy 👋</b>, I'm glad you made it through my top secret password that i use for every single one of my apps.
+    <b>Howdy 👋</b>
     <h4>What would you like to do?</h4>
     <ul>
         <li><a href="pages/background.html">change the background color for fun</a></li>
