--- a/welcome.html
+++ b/welcome.html
@@ -19,10 +19,11 @@
     <b>Howdy 👋</b>
     <h4>What would you like to do?</h4>
     <ul>
-        <li><a href="pages/background.html">change the background color for fun</a></li>
-        <li><a href="pages/stories.html">read some of my stories</a></li>
-        <li><a href="pages/memory.html">Play a game</a></a></li>
+        <li><a href="pages/memory.html">Play memory game</a></a></li>
+        <li><a href="pages/quiz.html">Take a quiz about me</a></a></li>
+        <li><a href="pages/stories.html">read some of my stories/journals</a></li>
         <li><a href="pages/rizz.html">Get rizzed</a></li>
+        <li><a href="pages/background.html">change the background color for fun</a></li>
         <li><a href="pages/donate.html">donate 🙏🏾</a></li>
     </ul>
         <script src="js/bg.js"></script>
