edit ui and fix quiz answers

--- a/welcome.html
+++ b/welcome.html
@@ -8,16 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <style>
-       ul{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-       }
-    </style>
-    <b>Howdy 👋</b>
-    <h4>What would you like to do?</h4>
+    <h2>Howdy 👋</h2>
+    <h3>What would you like to do?</h3>
     <ul>
         <li><a href="pages/memory.html">Play memory game</a></a></li>
         <li><a href="pages/quiz.html">Take a quiz about me</a></a></li>
